<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"   
    android:background="@color/transparent_white">
        
    <TextView
        android:id="@+id/textViewLocationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"     
        android:layout_marginLeft="10dp"
        android:text="@string/stringTextLocationName"
        android:textAppearance="?android:attr/textAppearanceLarge" />    
     <EditText
        android:id="@+id/editTextLocationName"
        android:layout_width="match_parent"
        android:gravity="top|left"
        android:layout_height="70dp"
        android:inputType="text">        
    </EditText>
      <TextView
        android:id="@+id/textViewLocationDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/stringTextLocationDescription"
        android:textAppearance="?android:attr/textAppearanceLarge" />    
     <EditText
        android:id="@+id/editTextLocationDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top|left"
        android:inputType="textMultiLine">     
     </EditText>     
     <Button
         android:id="@+id/buttonSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/buttonSave" />     
       <Button
         android:id="@+id/buttonCancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/buttonCancel" />    
</LinearLayout>
